<resources>
    <string name="app_name">Pantry Master</string>
    <string name="itemNameHint">Item Name</string>
    <string name="quantityHint">Quantity</string>
    <string name="categoryHint">Category</string>
    <string name="mulitUnit">Multi-united?</string>
    <string name="addButton">Add Item</string>
    <string name="deleteButton">Delete</string>
    <string name="saveButton">Save</string>
    <string name="unitName">Units</string>
    <string name="unitsPer">Units Per Item</string>
    <string name="currentUnits">Current Number of Units</string>
    <string name="socialTab">Social</string>
    <string name="recipesTab">Recipes</string>
    <string name="listsTab">Lists</string>
    <string name="inventoryTab">Inventory</string>
    <string name="homeTab">Home</string>
    <string name="addRecipe">Add Recipe</string>
    <string name="recipeNameHint">Recipe Name</string>
    <string name="recipeInstructions">Instructions:</string>
    <string name="recipeIngredients">Ingredients:</string>
    <string name="addRecipeButton">Add Recipe</string>
    <string name="ingredientsTag">Ingredients: </string>
    <string name="ingredientsButton"> + Add Ingredient </string>
    <string name="emptySpaceHint">\n\n\n</string>
    <string name="directionsTag">Directions: </string>
    <string name="directionsHint">\t(Tap to edit) \n\n\n</string>
    <string name="recipePicDescription">Image of recipe, or tap to add</string>
    <string name="construction">\n\n\nThis page is currently under construction. Feel free to send the developer ideas of what you would like to see here!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
