<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.example.groceryrpg.AddItem"
android:orientation="vertical"
tools:layout_editor_absoluteY="81dp"
tools:layout_editor_absoluteX="0dp">

<EditText
    android:id="@+id/itemName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/itemNameHint"
    android:inputType="textPersonName"
    app:layout_constraintBottom_toTopOf="@+id/quantity"
    app:layout_constraintHorizontal_bias="0.502"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintLeft_creator="1"/>

<EditText
    android:id="@+id/quantity"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/quantityHint"
    android:inputType="number"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/category"
    app:layout_constraintTop_toBottomOf="@+id/itemName"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintLeft_creator="1"/>

<EditText
    android:id="@+id/category"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/categoryHint"
    android:inputType="textPersonName"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintHorizontal_bias="0.502"
    app:layout_constraintTop_toBottomOf="@+id/quantity"
    app:layout_constraintBottom_toTopOf="@+id/checkMultiUnit"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintLeft_creator="1"/>

<CheckBox
    android:id="@+id/checkMultiUnit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:onClick="expandUnitMenu"
    android:text="@string/mulitUnit"
    app:layout_constraintBottom_toTopOf="@+id/unitName"
    app:layout_constraintHorizontal_bias="0.501"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/category"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintLeft_creator="1"/>

<EditText
    android:id="@+id/unitName"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/unitName"
    android:inputType="textPersonName"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/checkMultiUnit"
    app:layout_constraintBottom_toTopOf="@+id/unitNumber"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintLeft_creator="1"/>

<EditText
    android:id="@+id/unitNumber"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:ems="10"
    android:hint="@string/unitsPer"
    android:inputType="number"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/unitName"
    app:layout_constraintBottom_toTopOf="@+id/currUnit"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintLeft_creator="1"/>

    <EditText
        android:id="@+id/currUnit"
        android:inputType="number"
        android:ems="10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/currentUnits"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintTop_toBottomOf="@+id/unitNumber"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        />

<Button
    android:id="@+id/saveButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/saveButton"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/currUnit"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@+id/delete"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintLeft_creator="1"/>

<Button
    android:id="@+id/delete"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/deleteButton"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/currUnit"
    app:layout_constraintLeft_toRightOf="@+id/saveButton"
    tools:layout_constraintRight_creator="1"
    tools:layout_constraintLeft_creator="1"/>

</android.support.constraint.ConstraintLayout>
